# mqtt-topics-api

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
helm/mqtt-topics-api/: Chart.yaml  values.yaml
helm/mqtt-topics-api/templates/: _helpers.tpl  configmap.yaml  cronjob-mqtt_logs_cleaner.yaml  delpoyment-mqtt_logs_api.yaml  deployment-mqtt_logger.yaml  persistentvolumeclaim-sqlite_data_claim.yaml  service-mqtt_logs_api.yaml
scripts/: cleanup.py  init-setup.sh  logs.sh  mqttapp-cleanup.service  mqttapp-cleanup.timer  mqttapp.service  python-install.sh  python-process.sh  python-venv-setup.sh  restart-setup.sh  sensor-api.service  show_table.py  ssh-key.sh  user-and-dir-install.sh
src/: api_server.py  config.py  database.py  main.py  mqtt_app.py  mqtt_client.py
src/mqtt_logger/: Dockerfile  main.py  mqtt_app.py  mqtt_client.py
src/mqtt_logs_api/: Dockerfile  main.py
src/mqtt_logs_cleaner/: Dockerfile  main.py
src/shared/: config.py  database.py
src/shared/utils/: parse_payload_as_json.py  serialize_json_payload_as_str.py
src/utils/: decode_radiohead_payload.py  parse_payload_as_json.py  serialize_json_payload_as_str.py
