[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtt-monorepo"
version = "0.1.0"
description = "Monorepo with shared Python packages"

[project.optional-dependencies]
mqtt_logger = [
    "paho-mqtt==1.1.0",
]
mqtt_logs_api = [
    "uvicorn==0.35.0",
    "fastapi==0.116.1",
]
shared = [
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "click==8.2.1",
    "h11==0.16.0",
    "idna==3.10",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "python-dotenv==1.1.1",
    "sniffio==1.3.1",
    "starlette==0.47.3",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]